# capf

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: conf.py
docs/source/api/: drivers.rst  index.rst  reader.rst  validators.rst
scripts/: build_docs.py  serve_docs.py
src/capf/: __init__.py  adaptors.py  core.py  drivers.py  exceptions.py  groups.py  parser.py  reader.py  validators.py
